--- a/cluster/core/cert-manager/secret.enc.yaml
+++ b/cluster/core/cert-manager/secret.enc.yaml
@@ -5,4 +5,55 @@ metadata:
     name: cloudflare-token-secret
     namespace: cert-manager
 stringData:
-    cloudflare-token: ${BOOTSTRAP_CLOUDFLARE_TOKEN}
+    cloudflare-token: ENC[AES256_GCM,data:W+Br66S5qq36wIRaASmI1n1aztGJ5wYNAzwd9VkvEt0u8xQtD9dcoQ==,iv:5lmarU4lHGxcDnBF0Xg/v2xC8lhXh53w7QfOxV4zo84=,tag:y7KWJGCyk9k0Bom+prkQSw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2021-07-14T11:43:42Z"
+    mac: ENC[AES256_GCM,data:dllqhav5Wax1bg17sqAgV1w7Apz88iPN2Fg3EQEO9VytBpxl5YyreeauFnSftw+w4TfuxiKQSVQjSadp0Itpyo9YGKS2y03Xo0n0hqMU9MGS3gerEPHwnyBBQp+ZbTPuFaacLbR+kJRBzozlePlsbJKjOhKcGaHjxjApvvihzC4=,iv:Ceg9OPNdrKGgjW1uxYuW/2XQnMx/DsLwVjs+QflQ1Ds=,tag:ZD8hq2E+FSemyj4p525kNg==,type:str]
+    pgp:
+        - created_at: "2021-07-14T11:43:41Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+
+            hQIMA93hhnb3enmpARAAk6mvZvCZuJe+l5+6UYTFiX5LdeKf1xNuboWgx8jT+yuN
+            m2t6nA0pCieTGkrB/gnOfp+GsWt0J3qgcbiRe6895xaPnnknDiRmnT3pjrfuJm5B
+            YdDjAP1DD5SVYhHq+WCK7nVHzwFVaAm571gCPDgse07xGojNQwkM+mwu4oqt+P8F
+            PrDeyPpwcf4C9oRiesn2cSTarUXwW/H82FXf/gpKdVtFfqFijuIr3QGv2VJnMXp5
+            1cLW4a6y4Gc9VweJpXImdrC2LLgfL+2EZrqbg0QYqM6aduwBI+r0AxRNjxrUjrNo
+            g6SXwbIEztV55N0FsB9hJbPw1XLSxd65BGNIZ/olTY1iabqm5B9rP0eR14gN/wbT
+            LeyX+Fb8+n5RnngPM3NmJ3ne7ufDcRiR7A8KMEoPnyNGHkspyBMQqzpNUz7jH3de
+            XjhAEJK6M/6V/y56K8wknvpR2b3Luwkk8iD/cfzg2JAHCb6F5bWzkadc2H9dgMht
+            TCyyjpp1UwrPqp0NNbaGSw0CioVevATvbpOfDouXAqO3HLEeToc9f9+p5RnTF8rN
+            DRxM6K1AXXJKSap2MH4famcRZpP6M62m830esyo+YXTdogUvA7rxjEgZUMxG01BG
+            h55dIqrpgcX7+kASDo4VwdaUHW1xyefgPpSFXbeTci3G8+U5NABeRUJR2L5Y4yzS
+            XgGRPCxRnClRZXt42FNZf7UKm0LgtMMH6l0Pj3VKOQkcTsqa2qDKOc/tMSp2UH0D
+            3zlACIUF9dNT9e7cxGAus1r2cO1ZC/m/GXZqKfKHoppgn1Z99qo6Vgo8v+ltSwY=
+            =kbB1
+            -----END PGP MESSAGE-----
+          fp: B0BEDFFF48F4B4FDE37DDDF9F7612B0CD338046E
+        - created_at: "2021-07-14T11:43:41Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+
+            hQIMA0WjP3VGRkQGARAAocJCK87+azME0I6DuWVAlaWInv9EyKp6yFa8AJjxhNzr
+            e8ttH2HzNlvT2j+1qGl1qEKomIibZOu9/U+vq9VwO51mIng/7Z61+BXCpy1qtUU5
+            2d6os5C/IiYQr1hi3l7pe6mOymX3qnbtAfGP9gblVa2gX4WJprb4E0T1ORR8xu4F
+            4P2r+J6DcnTQK0w+bpmeNdTAvuI+Q9YZbLLvyO9ymQREI+j4Z8iDQoQCWJqtRPUI
+            wcfhOTwb/V3g81J7tpeaR5xvb2lCNPxFOqviIBehjUIPGhVaxuwzvZMoLKuOPt7E
+            X8vKzsJAoMJYTUPc1GuSOt1aHqrsjon6NprO9TgWNV6niv1NSsd/zccXN41EZ038
+            ukrWs0fZXT1CN7Iry08Za7oWZo523c1h331e6WGo+virpWVE7g+0qw4neHzGFjhZ
+            FaYAKoZ75H+SRE7ZamicZfOCIb0UB5nAjP13HlK6qinM1PkO3unjsyyzcJARuJrC
+            QSyNn9Y7FM8NwZuoCqIkxcFmtGb4kokgOW7jcm1ZB7uRI/e9qRUUZfOCs+GzcPaZ
+            N3igCVANlxUMLKr6MaArV0tPMW48XXkmYu7cPPCxcz+xljKw3CU7PnmhsQzXZfgI
+            CA8DFULiRUswRLjayx+doQSzWxJtjJgWabHFOVWk8f1yKPM3lYvVZZ/CY/QCMlrS
+            XgEdtPwfedq1uQfkelcsVsGfIvml9bKl8WEwqQkZY9D73Smd1jwSUKlP5FvrV6IY
+            gSnbJm4XlnY2N0BjSMGhXi/1grHjyHXX40VF/bZt3lILMdWh0jNrQWM51r/CAjM=
+            =SU9x
+            -----END PGP MESSAGE-----
+          fp: A092F959BA0505A15DD0DE90E7B11D65218B8FD2
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.1
