为traefik添加宿主机端口映射以做到所有节点的80和443都能访问

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -20,3 +20,10 @@ spec:
       kind: DaemonSet
     service:
       type: LoadBalancer
+    ports: 
+      web: 
+        expose: true
+        hostPort: 80
+      websecure: 
+        expose: true
+        hostPort: 443
