关闭在使用daemonset + 映射端口的情况下不必要的traefik service

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
     deployment:
       kind: DaemonSet
     service:
-      type: LoadBalancer
+      enabled: false
     ports: 
       web: 
         expose: true
