--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -7,14 +7,16 @@ metadata:
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:vq3UZPgL5PGAnuA=,iv:3EU5etdE1GoRxnP54/a02lkjaUzBp+6TIi5KXlbdwgg=,tag:fZNhfS2rOJPmey7Hhc9oKg==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:M1lYHDDgP4Ab6zxeAk3uKZStQBw=,iv:MlK31xlcN/w2LAASpMECWm5GFhzJqSjlRY0HxuOpr9c=,tag:/omNouO0tv0ei/TsrIABFw==,type:str]
+    SENTRY_ADMIN_EMAIL: ENC[AES256_GCM,data:affhly5/UraU54TwRXUk8eXAiyo=,iv:LaOWqOgIuh1wNKeNqml97GfJ5vxWY44HQQgqvcAsNuw=,tag:2JoUA0wFys7jCcKitSBmdw==,type:str]
+    SENTRY_ADMIN_PASSWORD: ENC[AES256_GCM,data:4unBpoBFpQg=,iv:Lx63HNuOhW2tKoG2QBIF3/v8xx3j+gNsz/gYN5G7NMk=,tag:mD38zQztzmsc6FPxdg08Zw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-07-14T11:43:41Z"
-    mac: ENC[AES256_GCM,data:5x90aI5EW2lPTFGVHzKAumBnIT1lWaPbZPzeTcfeLj6WfiYGrebKYXqm9LWKQPodUUdvpe5btIATOc04jnXEIb1qCNLeKKi5TxPuQ1L5TebYqi7JWkRHVkj20CXohTZQIWf49uX7vLnuI8KsHVyVYeJ4Tx7OUwm08Eh25IaG9Pc=,iv:CfNlp1wlcHoCXr/sNsFL/X231+l9e3+O4MvM7lmPpnk=,tag:O0jgYSbdULIGq4BilnQFJA==,type:str]
+    lastmodified: "2021-07-15T02:18:25Z"
+    mac: ENC[AES256_GCM,data:QqFyiylawN1I4pIyOacGFcYZllbPHJWMmBWda78l4Y9aoCFGDh5r3yVj30bC/VVzLMZM+9rj39JZ06amuXfYLJ5AmYTX3Yw5zJzXT22VrNmpX3k6Wy4MzsU1OCFPTB4/opyV/EfiWPZUdl5pu8octd1gd4ShvFmBVf92qozKQNA=,iv:WDXJw+1LaXc/NxdouqL2Fu4dZLbFfGLb34nXovDAN6M=,tag:tXTdGD5/U9NIo3WswdEhRg==,type:str]
     pgp:
         - created_at: "2021-07-14T11:43:40Z"
           enc: |
