--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -7,6 +7,7 @@ metadata:
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:vq3UZPgL5PGAnuA=,iv:3EU5etdE1GoRxnP54/a02lkjaUzBp+6TIi5KXlbdwgg=,tag:fZNhfS2rOJPmey7Hhc9oKg==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:M1lYHDDgP4Ab6zxeAk3uKZStQBw=,iv:MlK31xlcN/w2LAASpMECWm5GFhzJqSjlRY0HxuOpr9c=,tag:/omNouO0tv0ei/TsrIABFw==,type:str]
+    SECRET_LETS_ENCRYPT_EMAIL: ENC[AES256_GCM,data:vnW47InV9cVlp6Q8Bm4fq3XVFL0=,iv:Z3vbSQ0IbaYttN6lP0QW3plwYBxXWFTZlh/xzZQG2Iw=,tag:FVCMYBFGtnvinprLRb0T1g==,type:str]
     SECRET_SENTRY_ADMIN_EMAIL: ENC[AES256_GCM,data:hrS59iZSbVOuiE7fkVdc26+lhnY=,iv:6EWB1oZLTTXUX++9IhEliBb5IfwdAiM2cyaXcwq4M7I=,tag:3dC9qa1la8T1bkVLuFVynQ==,type:str]
     SECRET_SENTRY_ADMIN_PASSWORD: ENC[AES256_GCM,data:jBSobNyK5Hs=,iv:SEwieVdecC4eyPv8BgujdJv0UzvYIiINf7CjlZ1KcV0=,tag:SsYrwJj3OF417Mnba6u87Q==,type:str]
 sops:
@@ -15,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-07-15T02:21:32Z"
-    mac: ENC[AES256_GCM,data:boR1fSFPc5qcaemlC+fOiyBW58HKoEtFLu0IcsDrDFs6AMVZgKoG0ertFT6AhIv3QSdsW5jjacWpCG3PL3mt1/LtxravOdyjEDVcRzJZwj2mPIoxC+c7NmPj+IbRdh1MccSlU3Wv5Be11Sfi7+f4FjenptWJPFh2nJhm6B5ZSjI=,iv:hgu2q8lPjJpoW3UZzVReM5Jf7Te//mHhM5d/Dy706WQ=,tag:8KXS7WAxEK06xdk9V4MZNA==,type:str]
+    lastmodified: "2021-07-15T02:23:13Z"
+    mac: ENC[AES256_GCM,data:oC0sbHUcRMR3yiP4b7Wycrhk7vN5iWJHXsCDa5Mipqwe6b2gM1IQ5rhEoIjHgV8jPXYx6DnVzx4AVPmO/gQNQ79aUelxSjhKH0Vbe4Y66q81IiEAVUHA08JkNZaTqUOm43tOY/pvCKb3n7/WYS77s1C1+EGnDk5MMZdTmpgdCAQ=,iv:4pZLL7e7Yvw9d8hQh67xDFOLaaZvDp0k2bXtTFRdDcs=,tag:TIdlWWpCYJqACLlAIF0FPw==,type:str]
     pgp:
         - created_at: "2021-07-14T11:43:40Z"
           enc: |
