--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -29,3 +29,7 @@ spec:
       nameservers:
       - "1.1.1.1"
       - "8.8.8.8"
+    ingressShim:
+      defaultIssuerName: "letsencrypt-production"
+      defaultIssuerKind: "ClusterIssuer"
+      defaultIssuerGroup: "cert-manager.io"
