--- a/cluster/core/rook-ceph/storage/block-L2.yaml
+++ b/cluster/core/rook-ceph/storage/block-L2.yaml
@@ -13,11 +13,11 @@ spec:
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-   name: rook-ceph-block
+   name: ceph-block-l2
 provisioner: rook-ceph.rbd.csi.ceph.com
 parameters:
     clusterID: rook-ceph
-    pool: replicapool
+    pool: ceph-block-l2
     imageFormat: "2"
     csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
     csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
