创建一个无副本的ceph block池，并设置为默认存储类型

--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
 - filesystem-L1.yaml
 - filesystem-L2.yaml
 - filesystem-L3.yaml
+- block-L1.yaml
 - block-L2.yaml
 - volume-snapshot-class.yaml
