减少rancher的副本数以节省资源

--- a/cluster/apps/cluster-manager/rancher/helm-release.yaml
+++ b/cluster/apps/cluster-manager/rancher/helm-release.yaml
@@ -16,6 +16,7 @@ spec:
         name: rancher-charts
         namespace: flux-system
   values:
+    replicas: 1
     hostname: "rancher.${SECRET_DOMAIN}"
     ingress:
       tls:
