给traefik加上忽略节点污点的设置，以确保在所有服务器上都有运行traefik

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -27,3 +27,14 @@ spec:
       websecure: 
         expose: true
         hostPort: 443
+    tolerations:
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/control-plane
+        operator: Exists
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/master
+        operator: Exists
+      - effect: NoSchedule
+        key: location
+        value: cloud
+        operator: Equal
