--- a/cluster/apps/networking/traefik/override-config.yaml
+++ b/cluster/apps/networking/traefik/override-config.yaml
@@ -1,30 +1,18 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+apiVersion: helm.cattle.io/v1
+kind: HelmChartConfig
 metadata:
   name: traefik
-  namespace: networking
+  namespace: kube-system
 spec:
-  interval: 5m
-  chart:
-    spec:
-      # renovate: registryUrl=https://helm.traefik.io/traefik
-      chart: traefik
-      version: 10.0.0
-      sourceRef:
-        kind: HelmRepository
-        name: traefik-charts
-        namespace: flux-system
-  values:
+  valuesContent: |-
     deployment:
       kind: DaemonSet
-    service:
-      enabled: false
-    ports: 
-      web: 
+    ports:
+      web:
         expose: true
         hostPort: 80
-      websecure: 
+      websecure:
         expose: true
         hostPort: 443
     tolerations:
