为cert-manager添加http01的issuer，并将其设为默认issuer

--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -30,6 +30,6 @@ spec:
       - "1.1.1.1"
       - "8.8.8.8"
     ingressShim:
-      defaultIssuerName: "letsencrypt-production"
+      defaultIssuerName: "letsencrypt-http01"
       defaultIssuerKind: "ClusterIssuer"
       defaultIssuerGroup: "cert-manager.io"
