--- a/cluster/core/cert-manager/kustomization.yaml
+++ b/cluster/core/cert-manager/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
 - helm-release.yaml
 - letsencrypt-production.yaml
 - letsencrypt-staging.yaml
+- letsencrypt-http01.yaml
 - secret.enc.yaml
