将traefik接到的http请求统一强制重定向至https

--- a/cluster/apps/networking/traefik/override-config.yaml
+++ b/cluster/apps/networking/traefik/override-config.yaml
@@ -12,6 +12,7 @@ spec:
       web:
         expose: true
         hostPort: 80
+        redirectTo: websecure
       websecure:
         expose: true
         hostPort: 443
