关闭sentry实际不需要的自带nginx

--- a/cluster/apps/coding/sentry/helm-release.yaml
+++ b/cluster/apps/coding/sentry/helm-release.yaml
@@ -18,6 +18,8 @@ spec:
   values:
     ingress:
       enabled: true
+    nginx:
+      enabled: false
     user:
       email: "${SECRET_SENTRY_ADMIN_EMAIL}"
       password: "${SECRET_SENTRY_ADMIN_PASSWORD}"
