设置sentry的域名

--- a/cluster/apps/coding/sentry/helm-release.yaml
+++ b/cluster/apps/coding/sentry/helm-release.yaml
@@ -18,6 +18,7 @@ spec:
   values:
     ingress:
       enabled: true
+      hostname: "sentry.${SECRET_DOMAIN}"
     nginx:
       enabled: false
     user:
