--- a/cluster/core/rook-ceph/ceph-cluster/cluster.yaml
+++ b/cluster/core/rook-ceph/ceph-cluster/cluster.yaml
@@ -125,16 +125,16 @@ spec:
   # To control where various services will be scheduled by kubernetes, use the placement configuration sections below.
   # The example under 'all' would have all services scheduled on kubernetes nodes labeled with 'role=storage-node' and
   # tolerate taints with a key of 'storage-node'.
-#  placement:
-#    all:
-#      nodeAffinity:
-#        requiredDuringSchedulingIgnoredDuringExecution:
-#          nodeSelectorTerms:
-#          - matchExpressions:
-#            - key: role
-#              operator: In
-#              values:
-#              - storage-node
+  placement:
+    all:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: node-role.kubernetes.io/ceph
+              operator: In
+              values:
+              - "true"
 #      podAffinity:
 #      podAntiAffinity:
 #      topologySpreadConstraints:
