为sentry的pgsql固定设置一个密码，避免自动init时反复修改密码导致出错

--- a/cluster/apps/coding/sentry/helm-release.yaml
+++ b/cluster/apps/coding/sentry/helm-release.yaml
@@ -24,3 +24,5 @@ spec:
     user:
       email: "${SECRET_SENTRY_ADMIN_EMAIL}"
       password: "${SECRET_SENTRY_ADMIN_PASSWORD}"
+    postgresql:
+      postgresqlPassword: "${SECRET_SENTRY_PGSQL_PASSWORD}"
