--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -9,15 +9,16 @@ stringData:
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:M1lYHDDgP4Ab6zxeAk3uKZStQBw=,iv:MlK31xlcN/w2LAASpMECWm5GFhzJqSjlRY0HxuOpr9c=,tag:/omNouO0tv0ei/TsrIABFw==,type:str]
     SECRET_LETS_ENCRYPT_EMAIL: ENC[AES256_GCM,data:vnW47InV9cVlp6Q8Bm4fq3XVFL0=,iv:Z3vbSQ0IbaYttN6lP0QW3plwYBxXWFTZlh/xzZQG2Iw=,tag:FVCMYBFGtnvinprLRb0T1g==,type:str]
     SECRET_SENTRY_ADMIN_EMAIL: ENC[AES256_GCM,data:hrS59iZSbVOuiE7fkVdc26+lhnY=,iv:6EWB1oZLTTXUX++9IhEliBb5IfwdAiM2cyaXcwq4M7I=,tag:3dC9qa1la8T1bkVLuFVynQ==,type:str]
-    SECRET_SENTRY_ADMIN_PASSWORD: ENC[AES256_GCM,data:jBSobNyK5Hs=,iv:SEwieVdecC4eyPv8BgujdJv0UzvYIiINf7CjlZ1KcV0=,tag:SsYrwJj3OF417Mnba6u87Q==,type:str]
+    SECRET_SENTRY_ADMIN_PASSWORD: ENC[AES256_GCM,data:j9W19jt5DhzrsVvsPhsh6Q==,iv:egmr3Dph6ipAqtsNOhPUR5IMa8iFOHF+6PhPXdvxENQ=,tag:dv8AMYURucwDtJ2Ry/tFyQ==,type:str]
+    SECRET_SENTRY_PGSQL_PASSWORD: ENC[AES256_GCM,data:YYUCqcx7t4++Mgal4Wy258X0WtuyzyAjBjV9iZSfyyA=,iv:immq6rw1TJIdIlFPUZiW38GNZpGHeFS0FTMq5MTnfqc=,tag:4s6IW9e5okJrrWfOqmvJKg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-07-15T02:23:13Z"
-    mac: ENC[AES256_GCM,data:oC0sbHUcRMR3yiP4b7Wycrhk7vN5iWJHXsCDa5Mipqwe6b2gM1IQ5rhEoIjHgV8jPXYx6DnVzx4AVPmO/gQNQ79aUelxSjhKH0Vbe4Y66q81IiEAVUHA08JkNZaTqUOm43tOY/pvCKb3n7/WYS77s1C1+EGnDk5MMZdTmpgdCAQ=,iv:4pZLL7e7Yvw9d8hQh67xDFOLaaZvDp0k2bXtTFRdDcs=,tag:TIdlWWpCYJqACLlAIF0FPw==,type:str]
+    lastmodified: "2021-07-17T19:27:30Z"
+    mac: ENC[AES256_GCM,data:+/ZvRBqC5egoQWxDnCDRRSOYWEi0x3wtVglcMOi3RKTjua1gDi3uDeIY02Ltt/7LnEXzjDYlQ7FHmwC9I0bMpWKeWYSMiL3xV937LON46HkjBru0Y0YcCH2hS0hGD10y8WR49VwAyIpWWEVvSlPI9ahzEReNDAWlEO1L7JkTQxI=,iv:NAguBkCaar2JhdtVh6A4MOKP3t51tU8Ra4vfEznmAhI=,tag:Q3f4N9TOEqwit7uL38LrBw==,type:str]
     pgp:
         - created_at: "2021-07-14T11:43:40Z"
           enc: |
