--- a/cluster/apps/networking/traefik/override-config.yaml
+++ b/cluster/apps/networking/traefik/override-config.yaml
@@ -17,16 +17,7 @@ spec:
         expose: true
         hostPort: 443
     tolerations:
-      - effect: NoSchedule
-        key: node-role.kubernetes.io/control-plane
-        operator: Exists
-      - effect: NoSchedule
-        key: node-role.kubernetes.io/master
-        operator: Exists
-      - effect: NoSchedule
-        key: location
-        value: cloud
-        operator: Equal
+      - operator: "Exists"
     logs:
       access:
         enabled: true
