--- a/cluster/apps/home/octoprint/helm-release.yaml
+++ b/cluster/apps/home/octoprint/helm-release.yaml
@@ -16,6 +16,8 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
   values:
+    env:
+      OCTOPRINT_PORT: 80
     image:
       repository: octoprint/octoprint
       tag: 1.6.1
