为octoprint加上自动签发https证书

--- a/cluster/apps/home/octoprint/helm-release.yaml
+++ b/cluster/apps/home/octoprint/helm-release.yaml
@@ -29,6 +29,13 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+        annotations:
+          kubernetes.io/ingress.class: traefik
+          kubernetes.io/tls-acme: "true"
+        tls:
+          - hosts:
+              - "octoprint.${SECRET_DOMAIN}"
+            secretName: octoprint-tls
     securityContext:
       privileged: true
     persistence:
