为speedtest加上自动签发https证书

--- a/cluster/apps/monitoring/librespeed/helm-release.yaml
+++ b/cluster/apps/monitoring/librespeed/helm-release.yaml
@@ -27,3 +27,10 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+        annotations:
+          kubernetes.io/ingress.class: traefik
+          kubernetes.io/tls-acme: "true"
+        tls:
+          - hosts:
+              - "speedtest.${SECRET_DOMAIN}"
+            secretName: speedtest-tls
