为octoprint增加节点亲和，使其只能在连接了3D打印机的树莓派4B上运行

--- a/cluster/apps/home/octoprint/helm-release.yaml
+++ b/cluster/apps/home/octoprint/helm-release.yaml
@@ -46,3 +46,12 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /dev/ttyUSB0
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/hostname
+                  operator: In
+                  values:
+                    - "home-raspberry-pi4b"
