为octoprint增加自动创建pvc

--- a/cluster/apps/home/octoprint/helm-release.yaml
+++ b/cluster/apps/home/octoprint/helm-release.yaml
@@ -41,6 +41,9 @@ spec:
     persistence:
       data:
         enabled: true
+        type: pvc
+        size: 10Gi
+        accessMode: ReadWriteOnce
         mountPath: /octoprint
       printer:
         enabled: true
