在环境变量中关闭octoprint暂时未用到的摄像头功能

--- a/cluster/apps/home/octoprint/helm-release.yaml
+++ b/cluster/apps/home/octoprint/helm-release.yaml
@@ -18,6 +18,7 @@ spec:
   values:
     env:
       OCTOPRINT_PORT: 80
+      ENABLE_MJPG_STREAMER: "false"
     image:
       repository: octoprint/octoprint
       tag: 1.6.1
