为traefik增加gitlab ssh端口的映射

--- a/cluster/apps/networking/traefik/override-config.yaml
+++ b/cluster/apps/networking/traefik/override-config.yaml
@@ -16,6 +16,12 @@ spec:
       websecure:
         expose: true
         hostPort: 443
+      gitlab-ssh:
+        port: 10000
+        hostPort: 10000
+        expose: true
+        exposedPort: 10000
+        protocol: TCP
     tolerations:
       - operator: "Exists"
     logs:
