为kasten添加验证

--- a/cluster/apps/cluster-manage/kasten/helm-release.yaml
+++ b/cluster/apps/cluster-manage/kasten/helm-release.yaml
@@ -16,6 +16,10 @@ spec:
         name: kasten-charts
         namespace: flux-system
   values:
+    auth:
+      basicAuth:
+        enabled: true
+        htpasswd: "${SECRET_KASTEN_AUTH}"
     ingress:
       create: true
       tls:
