--- a/cluster/core/kube-system/cilium/helm-release.yaml
+++ b/cluster/core/kube-system/cilium/helm-release.yaml
@@ -15,3 +15,6 @@ spec:
         kind: HelmRepository
         name: cilium-charts
         namespace: flux-system
+  values:
+    operator:
+      replicas: 1
