调整cilium的配置，使用其完整替代掉kube-proxy 解决hostport无法访问的问题 开启cilium的hubble功能

--- a/cluster/core/kube-system/cilium/helm-release.yaml
+++ b/cluster/core/kube-system/cilium/helm-release.yaml
@@ -15,6 +15,7 @@ spec:
         kind: HelmRepository
         name: cilium-charts
         namespace: flux-system
-  values:
-    operator:
-      replicas: 1
+  valuesFrom:
+    - kind: ConfigMap
+      name: config
+      valuesKey: values.yaml
