--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,6 +5,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
+    SECRET_KUBE_APISERVER_HOST: ENC[AES256_GCM,data:xmWiROzi6a0zlcL4KDhlncvMpyyz8QE7EeE=,iv:BD5q7DMD2tONJS/gGREh1Lq/wm5e1NVxVmGTTbrM7Dc=,tag:VXCDvXT20l1sGmwOdGZtgg==,type:str]
+    SECRET_KUBE_APISERVER_PORT: ENC[AES256_GCM,data:690fNg==,iv:Foy32bbSWP5m9Q0+tJHWw363KYpMH8vp3KkqolfEQe8=,tag:l1CYKHG0gk4LXx7vWTyzig==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:vq3UZPgL5PGAnuA=,iv:3EU5etdE1GoRxnP54/a02lkjaUzBp+6TIi5KXlbdwgg=,tag:fZNhfS2rOJPmey7Hhc9oKg==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:M1lYHDDgP4Ab6zxeAk3uKZStQBw=,iv:MlK31xlcN/w2LAASpMECWm5GFhzJqSjlRY0HxuOpr9c=,tag:/omNouO0tv0ei/TsrIABFw==,type:str]
     SECRET_LETS_ENCRYPT_EMAIL: ENC[AES256_GCM,data:vnW47InV9cVlp6Q8Bm4fq3XVFL0=,iv:Z3vbSQ0IbaYttN6lP0QW3plwYBxXWFTZlh/xzZQG2Iw=,tag:FVCMYBFGtnvinprLRb0T1g==,type:str]
@@ -18,8 +20,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-07-29T13:08:42Z"
-    mac: ENC[AES256_GCM,data:ifmkozqnaJAgvX9/y7UWylAaCsJDQKXu5CD5ouH/cgpuST9oGq6Mb7jxClcAuY19Oft4pb+FpDOQ9+3NCaDGnRyFeeb6OHFMg0sdc+gDUYV/PekXctgj0iCdMSC7b2vSJhwiqxtn7ngdSrQhUCB82X9ogIFnhybic261ZjGr0wY=,iv:eSLlxcxRbbAlf0aog380HPuhsSwGt4zEcjjFS0vcyiQ=,tag:8Mq0wUrsUDH0nWYq7t0MUA==,type:str]
+    lastmodified: "2021-08-15T02:51:53Z"
+    mac: ENC[AES256_GCM,data:WLhxlemaSdf8UsLYABUSmrHGi0N5NOdGnLUKo8JteiNhkq86XH7wk+92ZzDblLIcfJyRga8vtWaOM8mR0cblwavT1qAb96CzbGCM4tL3kpaPxyjFqv6pYnoCtldHsmxTOiCtsjSTCxYvqoN7p6OFuxC1lBQ6a5lN/QefKH8Cszo=,iv:Dyga4s4FKyv7DMKXQVdapaUbSc9C2WGU2KLr5CW0fQo=,tag:NIVwPg4K/6CG+YSs8r6pgw==,type:str]
     pgp:
         - created_at: "2021-07-14T11:43:40Z"
           enc: |
