--- a/.github/workflows/renovate-schedule.yaml
+++ b/.github/workflows/renovate-schedule.yaml
@@ -1,11 +1,10 @@
 ---
-
 name: Schedule - Renovate Helm Releases
 
 on: # yamllint disable-line rule:truthy
   workflow_dispatch:
   schedule:
-    - cron: '0 */12 * * *'
+    - cron: "0 */12 * * *"
 
 jobs:
   renovate-helm-releases:
