--- a/cluster/core/cert-manager/kustomization.yaml
+++ b/cluster/core/cert-manager/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - letsencrypt-production.yaml
   - letsencrypt-staging.yaml
   - letsencrypt-http01.yaml
-  - secret.enc.yaml
+  - secret.sops.yaml
