--- a/cluster/core/rook-ceph/ceph-cluster/cluster.yaml
+++ b/cluster/core/rook-ceph/ceph-cluster/cluster.yaml
@@ -201,6 +201,13 @@ spec:
     useAllDevices: false
     #deviceFilter:
     config:
+      nodes:
+        - name: "home-server-nut"
+          devices:
+            - name: "/dev/disk/by-id/nvme-INTEL_SSDPED1D480GA_PHMB746300LC480DGN"
+              config:
+                osdsPerDevice: "4"
+                deviceClass: "nvme"
     # crushRoot: "custom-root" # specify a non-default root label for the CRUSH map
     # metadataDevice: "md0" # specify a non-rotational storage so ceph-volume will use it as block db device of bluestore.
     # databaseSizeMB: "1024" # uncomment if the disks are smaller than 100 GB
