添加一块希捷ST8000NM000A 8T 机械硬盘到ceph

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -56,6 +56,9 @@ spec:
                 config:
                   osdsPerDevice: "4"
                   deviceClass: "nvme"
+              - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0NC8L"
+                config:
+                  deviceClass: "hdd"
 
     ingress:
       dashboard:
