--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -56,7 +56,12 @@ spec:
                 config:
                   osdsPerDevice: "4"
                   deviceClass: "nvme"
+
               - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0NC8L"
+                config:
+                  deviceClass: "hdd"
+
+              - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD71JSA"
                 config:
                   deviceClass: "hdd"
 
