添加一块希捷ST6000NM0115 6T 机械硬盘到ceph

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -65,6 +65,10 @@ spec:
                 config:
                   deviceClass: "hdd"
 
+              - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD41FWR"
+                config:
+                  deviceClass: "hdd"
+
     ingress:
       dashboard:
         annotations:
