--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -52,6 +52,10 @@ spec:
         useAllDevices: false
         nodes:
           - name: "home-server-nut"
+            config:
+              metadataDevice: "/dev/disk/by-id/nvme-INTEL_SSDPED1D480GA_PHMB746300LC480DGN"
+              databaseSizeMB: "16384"
+              journalSizeMB: "4096"
             devices:
               - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0NC8L"
                 config:
