--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -69,6 +69,10 @@ spec:
                 config:
                   deviceClass: "hdd"
 
+              - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0JMTX"
+                config:
+                  deviceClass: "hdd"
+
     ingress:
       dashboard:
         annotations:
