将home assistant的pvc改为外置创建

--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -41,6 +41,4 @@ spec:
     persistence:
       config:
         enabled: true
-        type: pvc
-        size: 5Gi
-        accessMode: ReadWriteOnce
+        existingClaim: home-assistant-config
