--- a/cluster/apps/home/octoprint/helm-release.yaml
+++ b/cluster/apps/home/octoprint/helm-release.yaml
@@ -42,9 +42,7 @@ spec:
     persistence:
       data:
         enabled: true
-        type: pvc
-        size: 10Gi
-        accessMode: ReadWriteOnce
+        existingClaim: octoprint-data
         mountPath: /octoprint
       printer:
         enabled: true
