让kasten自动签发HTTPS证书

--- a/cluster/apps/cluster-manage/kasten/helm-release.yaml
+++ b/cluster/apps/cluster-manage/kasten/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
         htpasswd: "${SECRET_KASTEN_AUTH}"
     ingress:
       create: true
+      annotations:
+        kubernetes.io/tls-acme: "true"
       tls:
         enabled: true
         secretName: kasten-tls
