fixup! 自动确认kasten的eula

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -12,14 +12,16 @@ stringData:
   SECRET_SENTRY_ADMIN_PASSWORD: ENC[AES256_GCM,data:j9W19jt5DhzrsVvsPhsh6Q==,iv:egmr3Dph6ipAqtsNOhPUR5IMa8iFOHF+6PhPXdvxENQ=,tag:dv8AMYURucwDtJ2Ry/tFyQ==,type:str]
   SECRET_SENTRY_PGSQL_PASSWORD: ENC[AES256_GCM,data:YYUCqcx7t4++Mgal4Wy258X0WtuyzyAjBjV9iZSfyyA=,iv:immq6rw1TJIdIlFPUZiW38GNZpGHeFS0FTMq5MTnfqc=,tag:4s6IW9e5okJrrWfOqmvJKg==,type:str]
   SECRET_KASTEN_AUTH: ENC[AES256_GCM,data:9Uy909neSOm5uaHLSn8clcxWybbPnolKD5g/agPbkMrHhZj6EjM3D6q8,iv:XMlV9891twdyIfZuQjvVkZjcx/oajWWeucKhXRXkYgg=,tag:Z1DyZLlPBbUHABtVrO1b4Q==,type:str]
+  SECRET_KASTEN_EULA_COMPANY: ENC[AES256_GCM,data:36XI2A==,iv:CuekajuiS+v8VnKPNoMZvGmYORQdBy1fbRjvs+o0XUU=,tag:RxeBYFnmjXBr+bYLUnwLng==,type:str]
+  SECRET_KASTEN_EULA_EMAIL: ENC[AES256_GCM,data:2SBHazgM2DKksgGDJAKauzWnpIIfve4BL62L,iv:ZU41ZWjrh2lRGjgf8bg7ovA9Uh/YRAKNV0Q5BeWO0dE=,tag:N6hWNkDW+fBCpbr7AxkVAA==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2021-07-29T13:08:42Z"
-  mac: ENC[AES256_GCM,data:ifmkozqnaJAgvX9/y7UWylAaCsJDQKXu5CD5ouH/cgpuST9oGq6Mb7jxClcAuY19Oft4pb+FpDOQ9+3NCaDGnRyFeeb6OHFMg0sdc+gDUYV/PekXctgj0iCdMSC7b2vSJhwiqxtn7ngdSrQhUCB82X9ogIFnhybic261ZjGr0wY=,iv:eSLlxcxRbbAlf0aog380HPuhsSwGt4zEcjjFS0vcyiQ=,tag:8Mq0wUrsUDH0nWYq7t0MUA==,type:str]
+  lastmodified: "2021-08-20T14:47:15Z"
+  mac: ENC[AES256_GCM,data:cPqr1HlH3bXt3rzeyP5E/g79xaSXkDGubsCH43G/VYQh4Ajc/Rf7xUP8UUTUzp+Sx15dEsBKTotYNmn3WbU6aL2BrOsNmjSTydnBfuYzY2ObUW0uojvBJPTDUaFOO51tYEcPHiN6GSFlNvfHU4vHXzmz9by8PBsf4shniDMpnPA=,iv:i342+V7DZXmKX9F3tp4OadUlxiuS1+0jjWMoTIwbu6c=,tag:N1IE3vsurIvFX2bl6Nlt/Q==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
