--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -61,6 +61,10 @@ spec:
               - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD71JSA"
               - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD41FWR"
               - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0JMTX"
+          - name: "home-edge-gateway"
+            devices:
+              - name: "sda"
+              - name: "sdb"
 
     ingress:
       dashboard:
