修复ceph filesystem池配置中metadata池部分的故障域默认为host导致的始终存在故障问题

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -132,6 +132,7 @@ spec:
       - name: ceph-filesystem-l1
         spec:
           metadataPool:
+            failureDomain: osd
             replicated:
               size: 3
           dataPools:
@@ -158,6 +159,7 @@ spec:
       - name: ceph-filesystem-l2
         spec:
           metadataPool:
+            failureDomain: osd
             replicated:
               size: 3
           dataPools:
