--- a/cluster/apps/home/nas/pvcs/kustomization.yaml
+++ b/cluster/apps/home/nas/pvcs/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - octoprint
-  - home-assistant
-  - nas
+  - nas-test-l1.yaml
+  - nas-test-l2.yaml
