--- a/cluster/apps/coding/gitlab/kustomization.yaml
+++ b/cluster/apps/coding/gitlab/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - gitlab
-  - sentry
+  - helm-release.yaml
+  - shell-ingress.yaml
