--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -58,6 +58,13 @@ spec:
                   deviceClass: "nvme"
                   osdsPerDevice: "4"  # 在单块盘上创建 4 个 OSD 以最大化利用 Intel 900P 的性能
 
+              - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD71JSA"
+                config:
+                  deviceClass: "hdd"
+                  # 在 SSD 上划分出 HDD 1% 大小的 BlueStore Database 空间，以提升速度
+                  metadataDevice: "/dev/disk/by-id/ata-Samsung_SSD_870_EVO_1TB_S6PVNF0R604091N"
+                  databaseSizeMB: "60000"  # 60GB
+
     ingress:
       dashboard:
         annotations:
