--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -57,10 +57,22 @@ spec:
                 config:
                   deviceClass: "ssd"
                   osdsPerDevice: "2"  # 在单块盘上创建多个OSD以最大化利用SSD的性能，可以让OSD获得更多CPU资源进行并发读写，能提升IOPS，但会略微降低读写延迟（ns级）
-              - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0NC8L"
+
               - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD71JSA"
+                config:
+                  deviceClass: "hdd"
+
               - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD41FWR"
+                config:
+                  deviceClass: "hdd"
+
+              - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0NC8L"
+                config:
+                  deviceClass: "hdd"
+
               - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0JMTX"
+                config:
+                  deviceClass: "hdd"
 
     ingress:
       dashboard:
