--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -87,16 +87,17 @@ spec:
             secretName: ceph-dashboard-tls
 
     cephBlockPools:
-      - name: ceph-blockpool-l1
+      - name: block-hdd-r1
         spec:
           failureDomain: osd
           replicated:
-            size: 1
-            requireSafeReplicaSize: false
+            size: 1  # 副本数
+            requireSafeReplicaSize: false  # 安全选项，副本数为1时需要设为false，否则会无法创建
+          deviceClass: hdd  # 设置后端osd类型
         storageClass:
           enabled: true
-          name: ceph-block-l1  # 存储类名称
-          isDefault: false  # 设为默认存储类
+          name: ceph-block-hdd-r1  # 存储类名称
+          isDefault: false  # 是否设为默认存储类
           reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
           allowVolumeExpansion: true  # 支持动态调整PVC大小
 
@@ -112,15 +113,17 @@ spec:
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4  # 可以设置为xfs，但官方不推荐
 
-      - name: ceph-blockpool-l2
+      - name: block-hdd-r2
         spec:
           failureDomain: osd
           replicated:
-            size: 2
+            size: 2  # 副本数
+            requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+          deviceClass: hdd  # 设置后端osd类型
         storageClass:
           enabled: true
-          name: ceph-block-l2  # 存储类名称
-          isDefault: true  # 设为默认存储类
+          name: ceph-block-hdd-r2  # 存储类名称
+          isDefault: false  # 是否设为默认存储类
           reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
           allowVolumeExpansion: true  # 支持动态调整PVC大小
 
